# temptest

./: .cruft.json  .gitignore  MANIFEST.in  README.rst  pyproject.toml  tox.ini
.github/workflows/: ci.yml
docs/: conf.py  index.rst
licenses/: LICENSE.rst
temptest/: example_c.c
