[build-system]
requires = [
  "setuptools>=62.1",
  "setuptools_scm[toml]>=8.0.0",
  "wheel",
  "extension-helpers",
  "numpy>=1.25",
  "cython"
]
build-backend = "setuptools.build_meta"

[project]
name = "temptest"
description = "testing for error"
requires-python = ">=3.11"
readme = { file = "README.rst", content-type = "text/x-rst" }
license = { file = "licenses/LICENSE.rst" }
authors = [
  { name = "anika", email = "anikaslizewski@gmail.com" },
]
dependencies = []
dynamic = ["version"]

[project.scripts]
open_astronomy_package_template_example = "temptest.example_mod:main"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-doctestplus",
    "pytest-cov"
]
docs = [
    "sphinx",
    "sphinx-automodapi",
]
[project.urls]
repository = "None.git"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
include = ["temptest*"]
exclude = ["temptest._dev*"]

[tool.setuptools_scm]
version_file = "temptest/_version.py"

[tool.pytest.ini_options]
testpaths = [
  "temptest",
  "docs",
]
doctest_plus = "enabled"
text_file_format = "rst"
addopts = "--doctest-rst"

[tool.coverage.run]
omit = [
 "temptest/__init*",
 "temptest/conftest.py",
 "temptest/*setup_package*",
 "temptest/tests/*",
 "temptest/*/tests/*",
 "temptest/extern/*",
 "temptest/version*",
 "*/temptest/__init*",
 "*/temptest/conftest.py",
 "*/temptest/*setup_package*",
 "*/temptest/tests/*",
 "*/temptest/*/tests/*",
 "*/temptest/extern/*",
 "*/temptest/version*",
]

[tool.coverage.report]
exclude_lines = [
  # Have to re-enable the standard pragma
  "pragma: no cover",
  # Don't complain about packages we have installed
  "except ImportError",
  # Don't complain if tests don't hit assertions
  "raise AssertionError",
  "raise NotImplementedError",
  # Don't complain about script hooks
  "def main(.*):",
  # Ignore branches that don't pertain to this version of Python
  "pragma: py{ignore_python_version}",
  # Don't complain about IPython completion helper
  "def _ipython_key_completions_",
  # typing.TYPE_CHECKING is False at runtime
  "if TYPE_CHECKING:",
  # Ignore typing overloads
  "@overload",
]
